Build layout and add basic functionality

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>Flickr Slideshow</title>
 </head>
 
-<body>
+<body style="margin: 0; background: #888b97;">
     <div id="root">
 
     </div>
