Fix picture container alignment and tweak responsiveness

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>Flickr Slideshow</title>
 </head>
 
-<body style="margin: 0; background: #888b97;">
+<body>
     <div id="root">
 
     </div>
